# semantic-router

candle-binding/: Cargo.toml
candle-binding/src/ffi/: embedding.rs
candle-binding/src/model_architectures/embedding/: mod.rs  multimodal_embedding.rs  siglip2_vision.rs
deploy/helm/semantic-router/: README.md  values.schema.json  values.yaml
deploy/helm/semantic-router/templates/: dashboard-deployment.yaml
docs/probe-2026-05-15-mmel/: README.md  candidates_corpus_a.json  cosines_per_candidate_full.csv
docs/probe-2026-05-20-calibration/: README.md  calibration_2026_05_20_postnorm_full.csv  calibration_2026_05_20_postnorm_summary.csv  calibration_2026_05_20_prenorm_full.csv  calibration_2026_05_20_prenorm_summary.csv  mmes_2026_05_21_full.csv  mmes_2026_05_21_summary.csv  probe_mmes_20img.py
docs/probe-2026-05-25-image-drift-isolation/: README.md  step3_compare.py
src/semantic-router/pkg/config/: validator_embedding.go  validator_embedding_test.go
src/vllm-sr/: Makefile  rebuild-and-test.sh
tools/make/: helm.mk
website/docs/troubleshooting/: common-errors.md
website/docs/tutorials/signal/learned/: embedding-design-principles.md  embedding.md
website/versioned_docs/version-v0.3/tutorials/signal/learned/: embedding.md
